--- a/annotatedocs/themes/annotatedocs/static/sass/annotate.scss
+++ b/annotatedocs/themes/annotatedocs/static/sass/annotate.scss
@@ -1,6 +1,8 @@
 @import "wyrm_defaults";
 @import "clearfix";
 
+@import "icons";
+
 
 // annotatedocs style
 
@@ -41,20 +43,21 @@ $annotate-global-warning-color: #aa00aa;
     }
 
     .annotations-title {
-      .fa {
+      > span {
         color: $section-background-color;
+        display: none;
       }
-      .fa-bell {
+      .hints-indicator {
+        @include icon-bell;
         color: $annotate-hint-color;
-        display: none;
       }
-      .fa-warning {
+      .warnings-indicator {
+        @include icon-warning;
         color: $annotate-warning-color;
-        display: none;
       }
-      .fa-sitemap {
+      .global-indicator {
+        @include icon-sitemap;
         color: $annotate-global-warning-color;
-        display: none;
       }
     }
   }
@@ -138,11 +141,6 @@ html:not(.page-hide-hints) .has-hints,
 .global-warnings {
   margin-bottom: 1em;
 
-  .annotation:before {
-    @extend .fa;
-    padding-right: 5px;
-  }
-
   .annotation {
     display: block;
     color: $annotate-text-color;
@@ -151,20 +149,14 @@ html:not(.page-hide-hints) .has-hints,
   }
 
   .annotation-hint {
+    @include icon-bell;
     color: #444444;
     background-color: $annotate-hint-color;
   }
 
-  .annotation-hint:before {
-    @extend .fa-bell
-  }
-
   .annotation-warning {
+    @include icon-warning;
     background-color: $annotate-warning-color;
-  }
-
-  .annotation-warning:before {
-    @extend .fa-warning;
   }
 }
 
@@ -180,14 +172,13 @@ html:not(.page-hide-warnings) .has-warnings {
   border: solid 3px $annotate-global-warning-color;
 
   .annotation {
-    @extend .fa-sitemap;
+    @include icon-sitemap;
     background-color: $annotate-global-warning-color;
-
   }
 }
 
 .page-has-hints {
-  .annotations-title .fa-bell {
+  .annotations-title .hints-indicator {
     display: inline !important;
   }
   .annotations-detail label[for=show_hints] {
@@ -197,7 +188,7 @@ html:not(.page-hide-warnings) .has-warnings {
 }
 
 .page-has-warnings {
-  .annotations-title .fa-warning {
+  .annotations-title .warnings-indicator {
     display: inline !important;
   }
   .annotations-detail label[for=show_warnings] {
@@ -206,7 +197,7 @@ html:not(.page-hide-warnings) .has-warnings {
 }
 
 .page-has-global-annotations {
-  .annotations-title .fa-sitemap {
+  .annotations-title .global-indicator {
     display: inline !important;
   }
 }
